force-app/main/default/objects/BillantixSettings__c/BillantixSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Billantix Settings</label>
</CustomObject>