force-app/main/default/objects/BillantixSettings__c/fields/AutoActivateRenewalOrder__c.field-meta.xml
<CustomField>
    <fullName>AutoActivateRenewalOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Activate Renewal Order</label>
    <type>Checkbox</type>
</CustomField>