force-app/main/default/objects/BillantixSettings__c/fields/DefaultBillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>DefaultBillingFrequency__c</fullName>
    <label>Default Billing Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>