force-app/main/default/objects/BillantixSettings__c/fields/DefaultPricebookId__c.field-meta.xml
<CustomField>
    <fullName>DefaultPricebookId__c</fullName>
    <label>Default Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>