force-app/main/default/objects/BillantixSettings__c/fields/DefaultRenewalLeadDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultRenewalLeadDays__c</fullName>
    <label>Default Renewal Lead Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>