force-app/main/default/objects/BillantixSettings__c/fields/InvoiceBatchSize__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBatchSize__c</fullName>
    <label>Invoice Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>